@@ -15,6 +15,7 @@ Process Hacker
    * Added file information to service list tooltips
    * Balloon tips for process/service notifications are now clickable
    * Added handle names for unnamed File objects
+   * Added I/O Priority to tray icon process menu
    * Added warning for users who attempt to start the 32-bit version on 64-bit Windows
    * Updated ExtendedServices plugin:
      * Added service protection and SID information
